2008-10-13  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacsclient.c (longopts, print_help_and_exit): Add -nw.
	(decode_options): Use getopt_long_only.

2008-09-30  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (OTHER_PLATFORM_SUPPORT): Remove ccl.elc and
	codepage.elc.

2008-09-19  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacsclient.c (main): Use stdout rather than stdin to obtain the
	terminal (bug#427).

2008-08-25  Francesco Potortì  <pot@gnu.org>

	* etags.c (main): Do not use static space for the tagfile string.

2008-08-17  Francesco Potortì  <pot@gnu.org>

	* etags.c (main): Use canonicalize_filename on tags file name.
	(relative_filename): Revert 3.85: do not collapse slashes here.
	(absolute_dirname): Remove useless call to canonicalize_filename.
	(canonicalize_filename): Collapse multiple slashes here.

2008-08-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* Makefile.in (INSTALLABLES): Add LIB_SRC_EXTRA_INSTALLABLES.
	Do not special case for NS_IMPL_COCOA.

2008-07-16  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* Makefile.in (CFLAGS): Drop -universal under NS_IMPL_COCOA.
	(.m.o): Dispense with GNUstep-specific flags.

2008-08-05  Ulrich Mueller  <ulm@gentoo.org>

	* pop.c (socket_connection): Add conditionals for
	HAVE_KRB5_ERROR_TEXT and HAVE_KRB5_ERROR_E_TEXT to support
	compilation with MIT Kerberos and Heimdal, respectively.

2008-07-31  Dan Nicolaescu  <dann@ics.uci.edu>

	* etags.c:
	* emacsclient.c: Remove VMS support.

2008-07-27  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove support for Mac Carbon.
	* makefile.w32-in:
	* emacsclient.c: Remove code for Carbon.

2008-07-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* Makefile.in (mac-fix-env): Remove #ifdef around rule.

2008-07-17  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (INSTALL_SCRIPT): Remove duplicate definition.
	(LIB_STANDARD_LIBSRC): Don't define.
	(LOADLIBES): Remove LIB_STANDARD_LIBSRC.

2008-07-16  Adrian Robert  <Adrian.B.Robert@gmail.com>
